# gymcraft

./: .gitignore  AGENTS.md  README.md  build.gradle  gradle.properties
docs/: villager-brain-analysis.md
python/: README.md  generate_stubs.ps1  gymcraft_env.py  pyproject.toml  requirements.txt
src/main/java/io/github/mousemeya/gymcraft/: Config.java  GymCraft.java  GymCraftClient.java
src/main/java/io/github/mousemeya/gymcraft/gym/: EnvManager.java
src/main/java/io/github/mousemeya/gymcraft/item/: EnvToolItem.java
src/main/java/io/github/mousemeya/gymcraft/network/: GymCraftNetwork.java  SelectEnvTypePayload.java
src/main/java/io/github/mousemeya/gymcraft/registry/: ActionComponents.java  AgentStatusData.java  (+3 more)
src/main/java/io/github/mousemeya/withme/: Config.java  WithMe.java  WithMeClient.java
src/main/proto/gymcraft/gym/action/: components.proto  mc_action.proto
src/main/proto/gymcraft/gym/observation/: components.proto  entity.proto  inventory.proto  mc_observation.proto
src/main/proto/gymcraft/gym/rpc/: env_service.proto
src/main/proto/withme/gym/action/: components.proto  mc_action.proto
src/main/proto/withme/gym/observation/: components.proto  entity.proto  inventory.proto  mc_observation.proto  observation.proto
src/main/python/: .gitignore  README.md  generate_stubs.ps1  generate_stubs.py  pyproject.toml
src/main/python/src/gymcraft/: __init__.py  client.py
src/main/resources/assets/gymcraft/items/: agent_tool.json
src/main/resources/assets/gymcraft/lang/: en_us.json
src/main/resources/assets/withme/lang/: en_us.json
(+133 files in other folders)
