[build-system]
requires = ["setuptools>=75", "grpcio-tools>=1.81.1"]
build-backend = "setuptools.build_meta"

[project]
name = "gymcraft"
version = "1.0.0" # 这里和模组版本号保持一致
description = "Python RPC client for GymCraft - Gymnasium-style RL environments in Minecraft"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.81.1",
    "gymnasium>=1.3.0",
    "protobuf>=6.33.6",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["gymcraft", "gymcraft.*"]
